[gd_scene load_steps=17 format=2]

[ext_resource path="res://Data/Texture/crystall_ball.png" type="Texture" id=1]
[ext_resource path="res://Entity/Scene3/Scene3.gd" type="Script" id=2]
[ext_resource path="res://Data/Sprites/MiniBear.png" type="Texture" id=3]
[ext_resource path="res://Data/Sprites/tileset.png" type="Texture" id=4]
[ext_resource path="res://Entity/Scene3/Header.tscn" type="PackedScene" id=5]
[ext_resource path="res://Data/Sprites/Cars2.png" type="Texture" id=6]
[ext_resource path="res://Entity/Scene3/Car.gd" type="Script" id=7]
[ext_resource path="res://Entity/Scene3/Royal.gd" type="Script" id=8]
[ext_resource path="res://Data/Texture/Asteroid 01 - Base.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 362, 36.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9, 38 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 67, 8.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 24.8125 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 76, 15.1877 )

[sub_resource type="OpenSimplexNoise" id=5]

[sub_resource type="NoiseTexture" id=6]
width = 16
height = 16
noise = SubResource( 5 )

[node name="Scene3" type="Node2D"]
position = Vector2( 1, 3 )
script = ExtResource( 2 )

[node name="CrystallBall" type="Sprite" parent="."]
scale = Vector2( 0.397045, 0.359259 )
texture = ExtResource( 1 )

[node name="Bottom" type="StaticBody2D" parent="."]
position = Vector2( -0.000640869, 3.05176e-05 )
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 0, 172.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Bottom"]
position = Vector2( 2.00064, 128 )
scale = Vector2( 34.9453, 1.90625 )
texture = ExtResource( 3 )
hframes = 10
vframes = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bottom"]
position = Vector2( -364.999, 118 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 363.001, 119 )
shape = SubResource( 7 )

[node name="TrashPos" type="Node2D" parent="."]

[node name="Pos1" type="Position2D" parent="TrashPos"]
position = Vector2( -303, 15 )

[node name="Pos2" type="Position2D" parent="TrashPos"]
position = Vector2( -149, -13 )

[node name="Pos3" type="Position2D" parent="TrashPos"]
position = Vector2( 137, -45 )

[node name="Pos4" type="Position2D" parent="TrashPos"]
position = Vector2( 258, 20 )

[node name="Top" type="StaticBody2D" parent="."]
position = Vector2( 17, -24 )
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( -125.999, -61 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Top"]
position = Vector2( -125.999, -76 )
scale = Vector2( 6.6416, 1.16797 )
texture = ExtResource( 3 )
hframes = 10
vframes = 8

[node name="Trash_spawn_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Trash_can" type="StaticBody2D" parent="."]
position = Vector2( 17, -24 )
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash_can"]
position = Vector2( 307, -86.1875 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Trash_can"]
position = Vector2( 307, -84 )
scale = Vector2( 4.0166, 5.75 )
texture = ExtResource( 4 )
hframes = 18
vframes = 20
frame = 82

[node name="Header" parent="." instance=ExtResource( 5 )]
position = Vector2( -91, -121 )

[node name="Royal" type="RigidBody2D" parent="."]
position = Vector2( -47, -122 )
collision_layer = 32
collision_mask = 40
input_pickable = true
mode = 2
contacts_reported = 7
contact_monitor = true
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Royal"]
position = Vector2( 1.06641, 1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Royal"]
position = Vector2( 1.06642, 2.99998 )
scale = Vector2( 4.0166, 5.75 )
texture = ExtResource( 4 )
hframes = 18
vframes = 20
frame = 82

[node name="Car" type="StaticBody2D" parent="."]
position = Vector2( -264, 72 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Car"]
position = Vector2( 292.021, 49.1877 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Car"]
position = Vector2( 287.021, 40.3754 )
scale = Vector2( 2.00059, 2.02888 )
texture = ExtResource( 6 )
flip_h = true
vframes = 3
frame = 2

[node name="Light2D" type="Light2D" parent="Car"]
position = Vector2( 226, 40.5 )
scale = Vector2( 0.624999, 0.3125 )
texture = SubResource( 6 )
color = Color( 1, 0, 0, 1 )

[node name="Alarm_timer" type="Timer" parent="Car"]
wait_time = 0.5

[node name="Meteor_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Meteor" type="Sprite" parent="."]
position = Vector2( 448, -195 )
texture = ExtResource( 9 )

[node name="Meteor_coodr" type="Position2D" parent="."]
position = Vector2( 2, 78 )

[node name="Meteor_coodr_miss" type="Position2D" parent="."]
position = Vector2( -610, -123 )

[node name="Dead_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Trash_spawn_timer" to="." method="_on_Trash_spawn_timer_timeout"]
[connection signal="body_entered" from="Royal" to="Royal" method="_on_Royal_body_entered"]
[connection signal="input_event" from="Royal" to="Royal" method="_on_Royal_input_event"]
[connection signal="car_crash" from="Car" to="." method="_on_Car_car_crash"]
[connection signal="timeout" from="Car/Alarm_timer" to="Car" method="_on_Alarm_timer_timeout"]
[connection signal="timeout" from="Meteor_timer" to="." method="_on_Meteor_timer_timeout"]
[connection signal="timeout" from="Dead_timer" to="." method="_on_Dead_timer_timeout"]
